--- a/CS/javascript/counter/index.html
+++ b/CS/javascript/counter/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter App</title>
+    <style>
+        button{
+            border: 4px groove;
+            border-color: black;
+            background-color: gold;
+            font-family: Fantsy;
+            font-size: 15px;
+        }
+            
+        </style>
 </head>
 <body>
     <h3>Counter App</h3>
