--- a/CS/javascript/event-handling/index.html
+++ b/CS/javascript/event-handling/index.html
@@ -6,6 +6,7 @@
     <link rel-"stylesheet" href-"src/style.css">
   </head>
   <body>
-«script src="src/script.js"></script>
+    <script src="src/script.js"></script>
+    <button id=Clicker></button>
   </body>
 </html>
